St - style display on small screens and prevent horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,10 @@ h6 {
     background-size: cover;
 }
 
+.form-control {
+    background: transparent;
+}
+
 /* FOOTER SECTION */
 .footer-container {
     padding-top: 2rem;
